# pcb-jlcpcb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-binaries.yml  release-plz.yml
components/JLCPCB/AMS1117-3_3/: AMS1117-3_3.zen
components/JLCPCB/MAX98357AEWL_T/: MAX98357AEWL_T.zen
src/: main.rs
src/api/: cache.rs  client.rs  mod.rs  types.rs
src/commands/: bom.rs  generate.rs  mod.rs  search.rs  setup_claude.rs  util.rs
src/easyeda/: api.rs  footprint.rs  mod.rs  parser.rs  symbol.rs
src/generator/: mod.rs  zen.rs
src/pins/: cache.rs  extract.rs  mod.rs
templates/: component.zen.jinja  generic.zen.jinja
