[package]
name = "pcb-jlcpcb"
version = "0.1.3"
edition = "2021"
description = "JLCPCB parts library integration for pcb"
license = "MIT"
repository = "https://github.com/valtyr/pcb-jlcpcb"
readme = "README.md"
keywords = ["pcb", "jlcpcb", "electronics", "eda"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[[bin]]
name = "pcb-jlcpcb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
minijinja = "2"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = { version = "0.17", features = ["ansi"] }
thiserror = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
